--- a/README
+++ b/README
@@ -1,33 +1,30 @@
-This script adds the functions "animateAddClass", "animateRemoveClass" and "animateToggleClass" to the Dojo namespace (dojo.animateAddClass).
+This script adds the functions "animateAddClass", "animateRemoveClass" and
+"animateToggleClass" to the Dojo namespace (dojo.animateAddClass).
 
 These functions enable you to animate to the style that is defined in a CSS class.
 
 A brief example; if we have an HTML node:
 
-<pre>
 <div id="foo">
     Lorum ipsum
 </div>
-</pre>
 
 And a piece of CSS:
-<pre>
+
 .bar {
   background: red;
 }
-</pre>
 
 We can use this function to animate the transistion between #foo and #foo.bar:
-<pre>
+
 dojo.animateAddClass({
     node:"foo",
     className:"bar"
 }).play();
-</pre>
 
-It works in the exact same way as dojo.animateProperty, the only extra property you have to provide is "className".
-So more custom configurations are possible as well.
-<pre>
+This script is based on dojo.animateProperty so more custom configurations are
+possible as well. The only extra property you have to provide is "className".
+
 dojo.animateAddClass({
     node:"foo",
     className:"bar",
@@ -37,4 +34,3 @@ dojo.animateAddClass({
         console.log("ended");
     }
 }).play();
-</pre>
